--- a/4. Servlet & JSP/web_study/day05/pom.xml
+++ b/4. Servlet & JSP/web_study/day05/pom.xml
@@ -49,5 +49,22 @@
       <artifactId>logback-classic</artifactId>
       <version>1.4.8</version>
     </dependency>
+    <dependency>
+      <groupId>jakarta.servlet.jsp.jstl</groupId>
+      <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.web</groupId>
+      <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-fileupload2-jakarta</artifactId>
+      <version>2.0.0-M1</version>
+    </dependency>
+
+
   </dependencies>
 </project>
