--- a/6. Spring & Spring Boot/spring_study/exam01/pom.xml
+++ b/6. Spring & Spring Boot/spring_study/exam01/pom.xml
@@ -24,6 +24,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.20</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc8</artifactId>
             <version>23.2.0.0</version>
